force-app/main/default/objects/Attendance__c/fields/Hours_Worked_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Overtime__c</fullName>
    <formula>IF(Hours_Worked__c  &gt; 9, Hours_Worked__c  - 9, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Worked Overtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>