force-app/main/default/objects/Attendance__c/fields/Payroll_Payslip__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Payslip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll / Payslip</label>
    <referenceTo>Payroll_Payslip__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>