force-app/main/default/objects/Attendance__c/fields/Time_In__c.field-meta.xml
<CustomField>
    <fullName>Time_In__c</fullName>
    <label>Time In</label>
    <type>DateTime</type>
</CustomField>