force-app/main/default/objects/Attendance__c/fields/Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_Out__c</fullName>
    <label>Time Out</label>
    <type>DateTime</type>
</CustomField>